Updated from javapackager to jpackage